--- a/南沙图书馆/src/news-net.html
+++ b/南沙图书馆/src/news-net.html
@@ -66,14 +66,14 @@
 						</div>
 						<div class="content-container">
 
-							<div class="net-list">
-								<ul>
+							<div class="img-list-style-1">
+								<ul class="clearfix">
 									<li>
 										<a href="news-net-show.html" target="_blank" class="img">
 											<img src="./assets/images/p3.png" alt="">
 										</a>
 										<a href="news-net-show.html" target="_blank" class="t" title="展览内容标题展览内容标题展览内容标题">
-											展览内容标题展览内容标题展览内容标题
+											展览内容标题展览内容标题展览内容标题展览内容标题展览内容标题展览内容标题
 										</a>
 									</li>
 									<li>
