--- a/南沙图书馆/src/news-talk.html
+++ b/南沙图书馆/src/news-talk.html
@@ -85,44 +85,48 @@
 										<div class="img">
 											<img src="./assets/images/p2.png" alt="" />
 										</div>
-										<div class="dir">
-											第30讲
-											<div class="arrow"></div>
-										</div>
-										<div class="title">羊城少年学堂南沙图书馆第30讲——“迪士尼动漫与交响乐”</div>
-										<div class="item">
-											<strong>讲座时间：</strong> 2019年1月13日 下午15:00
-										</div>
-										<div class="item">
-											<strong>讲座地点：</strong> 南沙区图书馆三楼多功能室
-										</div>
-										<div class="item">
-											<strong>讲座嘉宾：</strong> 赵兵，广东广播电视台大型节目部国际导演，舞台美术家。
-										</div>
-										<div class="item">
-											<strong>讲座内容：</strong> 通过畅游乐趣无限的迪士尼童话世界，畅游乐趣无限的迪士尼童话世界，你将会在讲座中学到中提琴的相关知识，体验交响乐的视听乐趣。
+										<div class="wrap">
+											<div class="dir">
+												第29讲
+												<div class="arrow"></div>
+											</div>
+											<div class="title">羊城少年学堂南沙图书馆第30讲——“迪士尼动漫与交响乐”</div>
+											<div class="item">
+												<strong>讲座时间：</strong> 2019年1月13日 下午15:00
+											</div>
+											<div class="item">
+												<strong>讲座地点：</strong> 南沙区图书馆三楼多功能室
+											</div>
+											<div class="item">
+												<strong>讲座嘉宾：</strong> 赵兵，广东广播电视台大型节目部国际导演，舞台美术家。
+											</div>
+											<div class="item">
+												<strong>讲座内容：</strong> 通过畅游乐趣无限的迪士尼童话世界，畅游乐趣无限的迪士尼童话世界，你将会在讲座中通过畅游乐趣无限的迪士尼童话世界，畅游乐趣无限的迪士尼童话世界，你将会在讲座中学到中提琴的相关知识，体验交响乐的视听乐趣。学到中提琴的相关知识，体验交响乐的视听乐趣。
+											</div>
 										</div>
 									</li>
 									<li>
 										<div class="img">
 											<img src="./assets/images/p2.png" alt="" />
 										</div>
-										<div class="dir">
-											第30讲
-											<div class="arrow"></div>
-										</div>
-										<div class="title">羊城少年学堂南沙图书馆第30讲——“迪士尼动漫与交响乐”</div>
-										<div class="item">
-											<strong>讲座时间：</strong> 2019年1月13日 下午15:00
-										</div>
-										<div class="item">
-											<strong>讲座地点：</strong> 南沙区图书馆三楼多功能室
-										</div>
-										<div class="item">
-											<strong>讲座嘉宾：</strong> 赵兵，广东广播电视台大型节目部国际导演，舞台美术家。
-										</div>
-										<div class="item">
-											<strong>讲座内容：</strong> 通过畅游乐趣无限的迪士尼童话世界，畅游乐趣无限的迪士尼童话世界，你将会在讲座中学到中提琴的相关知识，体验交响乐的视听乐趣。
+										<div class="wrap">
+											<div class="dir">
+												第30讲
+												<div class="arrow"></div>
+											</div>
+											<div class="title">羊城少年学堂南沙图书馆第30讲——“迪士尼动漫与交响乐”</div>
+											<div class="item">
+												<strong>讲座时间：</strong> 2019年1月13日 下午15:00
+											</div>
+											<div class="item">
+												<strong>讲座地点：</strong> 南沙区图书馆三楼多功能室
+											</div>
+											<div class="item">
+												<strong>讲座嘉宾：</strong> 赵兵，广东广播电视台大型节目部国际导演，舞台美术家。
+											</div>
+											<div class="item">
+												<strong>讲座内容：</strong> 通过畅游乐趣无限的迪士尼童话世界，畅游乐趣无限的迪士尼童话世界，你将会在讲座中学到中提琴的相关知识，体验交响乐的视听乐趣。
+											</div>
 										</div>
 									</li>
 								</ul>
