--- a/南沙图书馆/src/reader-activity.html
+++ b/南沙图书馆/src/reader-activity.html
@@ -97,13 +97,13 @@
 						</div>
 						<div class="content-container">
 							<!-- 活动专题 -->
-							<div class="site-tabs">
-								<ul>
-									<li><a href="JavaScript:;">活动预告</a></li>
+							<div class="site-tabs mb20">
+								<ul class="clearfix">
+									<li class="active"><a href="JavaScript:;">活动预告</a></li>
 									<li><a href="JavaScript:;">活动回顾</a></li>
 								</ul>
 							</div>
-							<div class="activity-list">
+							<div class="theme-list">
 								<ul class="clearfix">
 									<ul>
 										<li>
@@ -112,7 +112,7 @@
 											</a>
 											<a href="reader-activity-show.html" class="date">
 												<span class="pull-right">2019/12</span>
-												<span class="primary">16</span>日
+												<span class="primary">16</span> 日
 											</a>
 											<a href="reader-activity-show.html" class="t">
 												活动名称活动名称活动名称活动名称活动名称活动名称
@@ -124,7 +124,7 @@
 											</a>
 											<a href="reader-activity-show.html" class="date">
 												<span class="pull-right">2019/12</span>
-												<span class="primary">16</span>日
+												<span class="primary">16</span> 日
 											</a>
 											<a href="reader-activity-show.html" class="t">
 												活动名称活动名称活动名称活动名称活动名称活动名称
@@ -136,7 +136,7 @@
 											</a>
 											<a href="reader-activity-show.html" class="date">
 												<span class="pull-right">2019/12</span>
-												<span class="primary">16</span>日
+												<span class="primary">16</span> 日
 											</a>
 											<a href="reader-activity-show.html" class="t">
 												活动名称活动名称活动名称活动名称活动名称活动名称
@@ -148,7 +148,7 @@
 											</a>
 											<a href="reader-activity-show.html" class="date">
 												<span class="pull-right">2019/12</span>
-												<span class="primary">16</span>日
+												<span class="primary">16</span> 日
 											</a>
 											<a href="reader-activity-show.html" class="t">
 												活动名称活动名称活动名称活动名称活动名称活动名称
@@ -160,7 +160,7 @@
 											</a>
 											<a href="reader-activity-show.html" class="date">
 												<span class="pull-right">2019/12</span>
-												<span class="primary">16</span>日
+												<span class="primary">16</span> 日
 											</a>
 											<a href="reader-activity-show.html" class="t">
 												活动名称活动名称活动名称活动名称活动名称活动名称
@@ -172,7 +172,7 @@
 											</a>
 											<a href="reader-activity-show.html" class="date">
 												<span class="pull-right">2019/12</span>
-												<span class="primary">16</span>日
+												<span class="primary">16</span> 日
 											</a>
 											<a href="reader-activity-show.html" class="t">
 												活动名称活动名称活动名称活动名称活动名称活动名称
@@ -184,7 +184,7 @@
 											</a>
 											<a href="reader-activity-show.html" class="date">
 												<span class="pull-right">2019/12</span>
-												<span class="primary">16</span>日
+												<span class="primary">16</span> 日
 											</a>
 											<a href="reader-activity-show.html" class="t">
 												活动名称活动名称活动名称活动名称活动名称活动名称
@@ -196,7 +196,7 @@
 											</a>
 											<a href="reader-activity-show.html" class="date">
 												<span class="pull-right">2019/12</span>
-												<span class="primary">16</span>日
+												<span class="primary">16</span> 日
 											</a>
 											<a href="reader-activity-show.html" class="t">
 												活动名称活动名称活动名称活动名称活动名称活动名称
@@ -208,7 +208,7 @@
 											</a>
 											<a href="reader-activity-show.html" class="date">
 												<span class="pull-right">2019/12</span>
-												<span class="primary">16</span>日
+												<span class="primary">16</span> 日
 											</a>
 											<a href="reader-activity-show.html" class="t">
 												活动名称活动名称活动名称活动名称活动名称活动名称
