--- a/南沙图书馆/src/reader-book-new.html
+++ b/南沙图书馆/src/reader-book-new.html
@@ -107,14 +107,14 @@
 											<a href="reader-book-show.html" target="_blank">
 												我喜欢生命本来的样子
 											</a>
-											<div class="sub">
-												作者: 吴晓波 著<br />
-												出版社: 中信出版社 <br />
-												出版时间: 2017年11月 <br />
-											</div>
-											<div class="info">
-												知名财经作者吴晓波新作，畅销十年、销量超过两百万册的《激荡三十年》续篇，至此完成改革开放四十年企业史完整记录。 作为时代记录者，吴晓波有意识地从19…
-											</div>
+										</div>
+										<div class="sub text-info mt10">
+											作者: 吴晓波 著<br />
+											出版社: 中信出版社 <br />
+											出版时间: 2017年11月 <br />
+										</div>
+										<div class="text-info info mt10">
+											知名财经作者吴晓波新作，畅销十年、销量超过两百万册的《激荡三十年》续篇，至此完成改革开放四十年企业史完整记录。 作为时代记录者，吴晓波有意识地从19…
 										</div>
 									</li>
 									<li>
@@ -125,14 +125,14 @@
 											<a href="reader-book-show.html" target="_blank">
 												我喜欢生命本来的样子
 											</a>
-											<div class="sub">
-												作者: 吴晓波 著<br />
-												出版社: 中信出版社 <br />
-												出版时间: 2017年11月 <br />
-											</div>
-											<div class="info">
-												知名财经作者吴晓波新作，畅销十年、销量超过两百万册的《激荡三十年》续篇，至此完成改革开放四十年企业史完整记录。 作为时代记录者，吴晓波有意识地从19…
-											</div>
+										</div>
+										<div class="sub text-info mt10">
+											作者: 吴晓波 著<br />
+											出版社: 中信出版社 <br />
+											出版时间: 2017年11月 <br />
+										</div>
+										<div class="text-info info mt10">
+											知名财经作者吴晓波新作，畅销十年、销量超过两百万册的《激荡三十年》续篇，至此完成改革开放四十年企业史完整记录。 作为时代记录者，吴晓波有意识地从19…
 										</div>
 									</li>
 									<li>
@@ -143,14 +143,14 @@
 											<a href="reader-book-show.html" target="_blank">
 												我喜欢生命本来的样子
 											</a>
-											<div class="sub">
-												作者: 吴晓波 著<br />
-												出版社: 中信出版社 <br />
-												出版时间: 2017年11月 <br />
-											</div>
-											<div class="info">
-												知名财经作者吴晓波新作，畅销十年、销量超过两百万册的《激荡三十年》续篇，至此完成改革开放四十年企业史完整记录。 作为时代记录者，吴晓波有意识地从19…
-											</div>
+										</div>
+										<div class="sub text-info mt10">
+											作者: 吴晓波 著<br />
+											出版社: 中信出版社 <br />
+											出版时间: 2017年11月 <br />
+										</div>
+										<div class="text-info info mt10">
+											知名财经作者吴晓波新作，畅销十年、销量超过两百万册的《激荡三十年》续篇，至此完成改革开放四十年企业史完整记录。 作为时代记录者，吴晓波有意识地从19…
 										</div>
 									</li>
 									<li>
@@ -161,14 +161,14 @@
 											<a href="reader-book-show.html" target="_blank">
 												我喜欢生命本来的样子
 											</a>
-											<div class="sub">
-												作者: 吴晓波 著<br />
-												出版社: 中信出版社 <br />
-												出版时间: 2017年11月 <br />
-											</div>
-											<div class="info">
-												知名财经作者吴晓波新作，畅销十年、销量超过两百万册的《激荡三十年》续篇，至此完成改革开放四十年企业史完整记录。 作为时代记录者，吴晓波有意识地从19…
-											</div>
+										</div>
+										<div class="sub text-info mt10">
+											作者: 吴晓波 著<br />
+											出版社: 中信出版社 <br />
+											出版时间: 2017年11月 <br />
+										</div>
+										<div class="text-info info mt10">
+											知名财经作者吴晓波新作，畅销十年、销量超过两百万册的《激荡三十年》续篇，至此完成改革开放四十年企业史完整记录。 作为时代记录者，吴晓波有意识地从19…
 										</div>
 									</li>
 									<li>
@@ -179,14 +179,14 @@
 											<a href="reader-book-show.html" target="_blank">
 												我喜欢生命本来的样子
 											</a>
-											<div class="sub">
-												作者: 吴晓波 著<br />
-												出版社: 中信出版社 <br />
-												出版时间: 2017年11月 <br />
-											</div>
-											<div class="info">
-												知名财经作者吴晓波新作，畅销十年、销量超过两百万册的《激荡三十年》续篇，至此完成改革开放四十年企业史完整记录。 作为时代记录者，吴晓波有意识地从19…
-											</div>
+										</div>
+										<div class="sub text-info mt10">
+											作者: 吴晓波 著<br />
+											出版社: 中信出版社 <br />
+											出版时间: 2017年11月 <br />
+										</div>
+										<div class="text-info info mt10">
+											知名财经作者吴晓波新作，畅销十年、销量超过两百万册的《激荡三十年》续篇，至此完成改革开放四十年企业史完整记录。 作为时代记录者，吴晓波有意识地从19…
 										</div>
 									</li>
 									<li>
@@ -197,14 +197,14 @@
 											<a href="reader-book-show.html" target="_blank">
 												我喜欢生命本来的样子
 											</a>
-											<div class="sub">
-												作者: 吴晓波 著<br />
-												出版社: 中信出版社 <br />
-												出版时间: 2017年11月 <br />
-											</div>
-											<div class="info">
-												知名财经作者吴晓波新作，畅销十年、销量超过两百万册的《激荡三十年》续篇，至此完成改革开放四十年企业史完整记录。 作为时代记录者，吴晓波有意识地从19…
-											</div>
+										</div>
+										<div class="sub text-info mt10">
+											作者: 吴晓波 著<br />
+											出版社: 中信出版社 <br />
+											出版时间: 2017年11月 <br />
+										</div>
+										<div class="text-info info mt10">
+											知名财经作者吴晓波新作，畅销十年、销量超过两百万册的《激荡三十年》续篇，至此完成改革开放四十年企业史完整记录。 作为时代记录者，吴晓波有意识地从19…
 										</div>
 									</li>
 								</ul>
