--- a/南沙图书馆/src/reader-book-show.html
+++ b/南沙图书馆/src/reader-book-show.html
@@ -106,15 +106,17 @@
 								</div>
 								<div class="book-show">
 									<div class="img">
-										<img src="./assets/images/8.png" alt="">
+										<img src="./assets/images/p8.png" alt="">
 									</div>
-									<div class="book-detail">
-										<strong class="font-16">著者：</strong>	xxxxxx<br />
-										<strong class="font-16">出版社：</strong> xxxxxx<br />
-										<strong class="font-16">出版时间：</strong> 2019-01-01 <br />
-										<strong class="font-16">索书号：</strong> 44255-234
-										<div class="strong font-16 mt20 mb20">
-											图书简介
+									<div class="book-detail font-16">
+										<div class="info">
+											<strong>著者：</strong>	xxxxxx<br />
+											<strong>出版社：</strong> xxxxxx<br />
+											<strong>出版时间：</strong> 2019-01-01 <br />
+											<strong>索书号：</strong> 44255-234
+										</div>
+										<div class=" font-16 mt20 mb10">
+											<strong>图书简介</strong>
 										</div>
 										<div class="editor">
 											<p>一个人的生命，终究是为了活出自己。 如果你有幸在很小的时候就被告知这一点，并身体力行，那么你或许会有一个非常不同的人生起点。 自1992年考入北京大学心理学系，武志红对这个问题的思考不断深入，到现在已有25年。</p>
