--- a/南沙图书馆/src/reader-consult.html
+++ b/南沙图书馆/src/reader-consult.html
@@ -98,7 +98,7 @@
 						<div class="content-container">
 							<!-- 读者咨询 -->
 							<div class="site-tabs">
-								<ul>
+								<ul class="clearfix">
 									<li class="active"><a href="JavaScript:;">常见问题</a></li>
 									<li><a href="JavaScript:;">现场咨询</a></li>
 									<li><a href="JavaScript:;">邮箱咨询</a></li>
@@ -106,13 +106,13 @@
 								</ul>
 							</div>
 
-							<div class="site-tabs-content">
+							<div class="site-tabs-content mt10">
 								<!-- 常见问题 -->
 								<div id="tab1" class="panel">
 									<div class="question-list">
 										<ul>
-											<li>
-												<a href="javascript:;">
+											<li class="active">
+												<a href="javascript:;" class="t">
 													<div class="pull-right">
 														<i class="icon icon-arrow-down icon-arrow-down-active"></i>
 													</div>
@@ -123,7 +123,18 @@
 												</div>
 											</li>
 											<li>
-												<a href="javascript:;">
+												<a href="javascript:;" class="t">
+													<div class="pull-right">
+														<i class="icon icon-arrow-down"></i>
+													</div>
+													怎样续借图书及怎样在网上续借图书？能续借几次？
+												</a>
+												<div class="answer">
+													读者可拿借书证或书到图书馆由工作人员办理续借，每位读者最多只能续借1次，借期从续借成功当天算起31天。网上续借图书请进入图书馆主页－我的图书馆-按屏幕提示，输入“注册名”或“证号”，密码，然后点击“登录进入我的图书馆”，点击“图书续借”，选择您需要续借的图书。续借是否成功，系统有明显提示。续借操作完成后，应该再查询一下借书情况，进一步确认续借是否成功。借阅期内如遇闭馆或节假日借期顺延；校内读者借阅期内遇寒暑假顺延至假期之后
+												</div>
+											</li>
+											<li>
+												<a href="javascript:;" class="t">
 													<div class="pull-right">
 														<i class="icon icon-arrow-down"></i>
 													</div>
@@ -231,13 +242,18 @@
 										对于一般性问题，我们致力于2至3个工作日内给予答复，对于较深入的问题，我们将在5个工作日内给予答复。 <br />
 										我们承诺严格遵守知识产权相关规定，尊重并保护用户隐私权。
 									</div>
+									<div class="consult-list-bar">
+										<a href="#" class="btn btn-primary">
+											我要留言
+										</a>
+									</div>
 									<div class="consult-list">
 										<table class="table table-consult table-hover">
 											<thead>
 												<tr>
-													<td>主题</td>
-													<td width="150">作者</td>
-													<td width="180">发布时间</td>
+													<th>主题</th>
+													<th width="150">作者</th>
+													<th width="170">发布时间</th>
 												</tr>
 											</thead>
 											<tbody>
