--- a/南沙图书馆/src/resource-ebook.html
+++ b/南沙图书馆/src/resource-ebook.html
@@ -73,11 +73,11 @@
 							<div class="ebook-list">
 								<ul class="clearfix">
 									<li>
-										<div class="img"><img src="./assets/images/p3.png" alt=""></div>
-										<div class="t">
+										<div class="img"><img src="./assets/images/p11.png" alt=""></div>
+										<div class="t" title="谈判：如何在博弈中获得更多(第四版)">
 											谈判：如何在博弈中获得更多(第四版)
 										</div>
-										<div class="info">
+										<div class="info text-info">
 											简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介
 										</div>
 										<div class="type">书籍格式: PDF</div>
@@ -85,11 +85,11 @@
 										<button class="btn btn-default">下载阅读</button>
 									</li>
 									<li>
-										<div class="img"><img src="./assets/images/p3.png" alt=""></div>
-										<div class="t">
+										<div class="img"><img src="./assets/images/p11.png" alt=""></div>
+										<div class="t" title="谈判：如何在博弈中获得更多(第四版)">
 											谈判：如何在博弈中获得更多(第四版)
 										</div>
-										<div class="info">
+										<div class="info text-info">
 											简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介
 										</div>
 										<div class="type">书籍格式: PDF</div>
@@ -97,11 +97,11 @@
 										<button class="btn btn-default">下载阅读</button>
 									</li>
 									<li>
-										<div class="img"><img src="./assets/images/p3.png" alt=""></div>
-										<div class="t">
+										<div class="img"><img src="./assets/images/p11.png" alt=""></div>
+										<div class="t" title="谈判：如何在博弈中获得更多(第四版)">
 											谈判：如何在博弈中获得更多(第四版)
 										</div>
-										<div class="info">
+										<div class="info text-info">
 											简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介
 										</div>
 										<div class="type">书籍格式: PDF</div>
@@ -109,11 +109,11 @@
 										<button class="btn btn-default">下载阅读</button>
 									</li>
 									<li>
-										<div class="img"><img src="./assets/images/p3.png" alt=""></div>
-										<div class="t">
+										<div class="img"><img src="./assets/images/p11.png" alt=""></div>
+										<div class="t" title="谈判：如何在博弈中获得更多(第四版)">
 											谈判：如何在博弈中获得更多(第四版)
 										</div>
-										<div class="info">
+										<div class="info text-info">
 											简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介
 										</div>
 										<div class="type">书籍格式: PDF</div>
@@ -121,11 +121,11 @@
 										<button class="btn btn-default">下载阅读</button>
 									</li>
 									<li>
-										<div class="img"><img src="./assets/images/p3.png" alt=""></div>
-										<div class="t">
+										<div class="img"><img src="./assets/images/p11.png" alt=""></div>
+										<div class="t" title="谈判：如何在博弈中获得更多(第四版)">
 											谈判：如何在博弈中获得更多(第四版)
 										</div>
-										<div class="info">
+										<div class="info text-info">
 											简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介
 										</div>
 										<div class="type">书籍格式: PDF</div>
@@ -133,11 +133,11 @@
 										<button class="btn btn-default">下载阅读</button>
 									</li>
 									<li>
-										<div class="img"><img src="./assets/images/p3.png" alt=""></div>
-										<div class="t">
+										<div class="img"><img src="./assets/images/p11.png" alt=""></div>
+										<div class="t" title="谈判：如何在博弈中获得更多(第四版)">
 											谈判：如何在博弈中获得更多(第四版)
 										</div>
-										<div class="info">
+										<div class="info text-info">
 											简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介
 										</div>
 										<div class="type">书籍格式: PDF</div>
@@ -145,11 +145,11 @@
 										<button class="btn btn-default">下载阅读</button>
 									</li>
 									<li>
-										<div class="img"><img src="./assets/images/p3.png" alt=""></div>
-										<div class="t">
+										<div class="img"><img src="./assets/images/p11.png" alt=""></div>
+										<div class="t" title="谈判：如何在博弈中获得更多(第四版)">
 											谈判：如何在博弈中获得更多(第四版)
 										</div>
-										<div class="info">
+										<div class="info text-info">
 											简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介
 										</div>
 										<div class="type">书籍格式: PDF</div>
@@ -157,23 +157,11 @@
 										<button class="btn btn-default">下载阅读</button>
 									</li>
 									<li>
-										<div class="img"><img src="./assets/images/p3.png" alt=""></div>
-										<div class="t">
+										<div class="img"><img src="./assets/images/p11.png" alt=""></div>
+										<div class="t" title="谈判：如何在博弈中获得更多(第四版)">
 											谈判：如何在博弈中获得更多(第四版)
 										</div>
-										<div class="info">
-											简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介
-										</div>
-										<div class="type">书籍格式: PDF</div>
-										<div class="size">文件大小: 10.2MB</div>
-										<button class="btn btn-default">下载阅读</button>
-									</li>
-									<li>
-										<div class="img"><img src="./assets/images/p3.png" alt=""></div>
-										<div class="t">
-											谈判：如何在博弈中获得更多(第四版)
-										</div>
-										<div class="info">
+										<div class="info text-info">
 											简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介
 										</div>
 										<div class="type">书籍格式: PDF</div>
@@ -185,7 +173,7 @@
 							<!-- 电子书 -->
 
 							<!-- 分页 -->
-							<ul class="pagination">
+							<ul class="pagination mt5">
 								<li class="disabled">
 									<a href="#">
 										上一页
