--- a/南沙图书馆/src/resource-media.html
+++ b/南沙图书馆/src/resource-media.html
@@ -71,70 +71,94 @@
 						<div class="content-container">
 							<!-- 多媒体 -->
 							<div class="media-views">
-								<div class="view">
-									<a href="#">
-										<img src="./assets/images/p6.png" alt="" />
-										<i class="icon icon-media"></i>
-										<div class="t">独唱《E-mail飞出山沟沟》</div>
-									</a>
+								<div class="views">
+									<div class="view">
+										<a href="#">
+											<img src="./assets/images/p7.png" alt="" />
+											<i class="icon icon-media"></i>
+											<div class="t">独唱《E-mail飞出山沟沟》</div>
+										</a>
+									</div>
 								</div>
 								<div class="thumbs">
-									<a href="javascript:;">
-										<img src="./assets/images/p6.png" alt="">
+									<a href="javascript:;" class="img active">
+										<img src="./assets/images/p5.png" alt="">
+										<div class="shadow"></div>
 									</a>
-									<a href="javascript:;">
-										<img src="./assets/images/p6.png" alt="">
+									<a href="javascript:;" class="img">
+										<img src="./assets/images/p5.png" alt="">
+										<div class="shadow"></div>
 									</a>
-									<a href="javascript:;">
-										<img src="./assets/images/p6.png" alt="">
+									<a href="javascript:;" class="img">
+										<img src="./assets/images/p5.png" alt="">
+										<div class="shadow"></div>
 									</a>
-									<a href="javascript:;">
-										<img src="./assets/images/p6.png" alt="">
+									<a href="javascript:;" class="img">
+										<img src="./assets/images/p5.png" alt="">
+										<div class="shadow"></div>
 									</a>
-									<a href="javascript:;">
-										<img src="./assets/images/p6.png" alt="">
+									<a href="javascript:;" class="img">
+										<img src="./assets/images/p5.png" alt="">
+										<div class="shadow"></div>
 									</a>
-									<a href="javascript:;">
-										<img src="./assets/images/p6.png" alt="">
+									<a href="javascript:;" class="img">
+										<img src="./assets/images/p5.png" alt="">
+										<div class="shadow"></div>
 									</a>
 								</div>
 							</div>
-							<div class="mb15 mt20 font-16">
+							<div class="mb15 mt30 font-16">
 								<strong>最新推荐</strong>
 							</div>
 							<div class="media-list">
-								<ul>
+								<ul class="clearfix">
 									<li>
-										<a href="#" class="img"><img src="./assets/images/p5.png" alt=""></a>
-										<a href="#" class="t">心飞扬少儿联欢晚会</a>
+										<a href="#" class="img"><img src="./assets/images/p10.png" alt=""></a>
+										<div class="t">
+											<a href="#">心飞扬少儿联欢晚会</a>
+										</div>
 									</li>
 									<li>
-										<a href="#" class="img"><img src="./assets/images/p5.png" alt=""></a>
-										<a href="#" class="t">心飞扬少儿联欢晚会</a>
+										<a href="#" class="img"><img src="./assets/images/p10.png" alt=""></a>
+										<div class="t">
+											<a href="#">心飞扬少儿联欢晚会</a>
+										</div>
 									</li>
 									<li>
-										<a href="#" class="img"><img src="./assets/images/p5.png" alt=""></a>
-										<a href="#" class="t">心飞扬少儿联欢晚会</a>
+										<a href="#" class="img"><img src="./assets/images/p10.png" alt=""></a>
+										<div class="t">
+											<a href="#">心飞扬少儿联欢晚心飞扬少儿联欢晚会心飞扬少儿联欢晚会会</a>
+										</div>
 									</li>
 									<li>
-										<a href="#" class="img"><img src="./assets/images/p5.png" alt=""></a>
-										<a href="#" class="t">心飞扬少儿联欢晚会</a>
+										<a href="#" class="img"><img src="./assets/images/p10.png" alt=""></a>
+										<div class="t">
+											<a href="#">心飞扬少儿联欢晚会</a>
+										</div>
 									</li>
 									<li>
-										<a href="#" class="img"><img src="./assets/images/p5.png" alt=""></a>
-										<a href="#" class="t">心飞扬少儿联欢晚会</a>
+										<a href="#" class="img"><img src="./assets/images/p10.png" alt=""></a>
+										<div class="t">
+											<a href="#">心飞扬少儿联欢晚会</a>
+										</div>
 									</li>
 									<li>
-										<a href="#" class="img"><img src="./assets/images/p5.png" alt=""></a>
-										<a href="#" class="t">心飞扬少儿联欢晚会</a>
+										<a href="#" class="img"><img src="./assets/images/p10.png" alt=""></a>
+										<div class="t">
+											<a href="#">心飞扬少儿联欢晚会</a>
+										</div>
 									</li>
 									<li>
-										<a href="#" class="img"><img src="./assets/images/p5.png" alt=""></a>
-										<a href="#" class="t">心飞扬少儿联欢晚会</a>
+										<a href="#" class="img"><img src="./assets/images/p10.png" alt=""></a>
+										<div class="t">
+											<a href="#">心飞扬少儿联欢晚会</a>
+										</div>
 									</li>
 									<li>
-										<a href="#" class="img"><img src="./assets/images/p5.png" alt=""></a>
-										<a href="#" class="t">心飞扬少儿联欢晚会</a>
+										<a href="#" class="img"><img src="./assets/images/p10.png" alt=""></a>
+										<div class="t">
+											<a href="#">心飞扬少儿联欢晚会</a>
+										</div>
 									</li>
 								</ul>
 							</div>
