--- a/南沙图书馆/src/resource-theme.html
+++ b/南沙图书馆/src/resource-theme.html
@@ -71,89 +71,77 @@
 						<div class="content-container">
 							<!-- 主题资源 -->
 							<div class="resource-theme-list">
-								<ul>
+								<ul class="clearfix">
 									<li>
-										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="img"><img src="./assets/images/p6.png" alt=""></a>
 										<a href="#" class="t">我喜欢生命本来的样子</a>
 									</li>
 									<li>
-										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="img"><img src="./assets/images/p6.png" alt=""></a>
+										<a href="#" class="t">我喜欢我喜欢生命本来的样子我喜欢生命本来的样子生命本来的样子</a>
+									</li>
+									<li>
+										<a href="#" class="img"><img src="./assets/images/p6.png" alt=""></a>
 										<a href="#" class="t">我喜欢生命本来的样子</a>
 									</li>
 									<li>
-										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="img"><img src="./assets/images/p6.png" alt=""></a>
 										<a href="#" class="t">我喜欢生命本来的样子</a>
 									</li>
 									<li>
-										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="img"><img src="./assets/images/p6.png" alt=""></a>
 										<a href="#" class="t">我喜欢生命本来的样子</a>
 									</li>
 									<li>
-										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="img"><img src="./assets/images/p6.png" alt=""></a>
 										<a href="#" class="t">我喜欢生命本来的样子</a>
 									</li>
 									<li>
-										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="img"><img src="./assets/images/p6.png" alt=""></a>
 										<a href="#" class="t">我喜欢生命本来的样子</a>
 									</li>
 									<li>
-										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="img"><img src="./assets/images/p6.png" alt=""></a>
 										<a href="#" class="t">我喜欢生命本来的样子</a>
 									</li>
 									<li>
-										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="img"><img src="./assets/images/p6.png" alt=""></a>
 										<a href="#" class="t">我喜欢生命本来的样子</a>
 									</li>
 									<li>
-										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="img"><img src="./assets/images/p6.png" alt=""></a>
 										<a href="#" class="t">我喜欢生命本来的样子</a>
 									</li>
 									<li>
-										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="img"><img src="./assets/images/p6.png" alt=""></a>
 										<a href="#" class="t">我喜欢生命本来的样子</a>
 									</li>
 									<li>
-										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="img"><img src="./assets/images/p6.png" alt=""></a>
 										<a href="#" class="t">我喜欢生命本来的样子</a>
 									</li>
 									<li>
-										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="img"><img src="./assets/images/p6.png" alt=""></a>
 										<a href="#" class="t">我喜欢生命本来的样子</a>
 									</li>
 									<li>
-										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="img"><img src="./assets/images/p6.png" alt=""></a>
 										<a href="#" class="t">我喜欢生命本来的样子</a>
 									</li>
 									<li>
-										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="img"><img src="./assets/images/p6.png" alt=""></a>
 										<a href="#" class="t">我喜欢生命本来的样子</a>
 									</li>
 									<li>
-										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="img"><img src="./assets/images/p6.png" alt=""></a>
 										<a href="#" class="t">我喜欢生命本来的样子</a>
 									</li>
 									<li>
-										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="img"><img src="./assets/images/p6.png" alt=""></a>
 										<a href="#" class="t">我喜欢生命本来的样子</a>
 									</li>
 									<li>
-										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
-										<a href="#" class="t">我喜欢生命本来的样子</a>
-									</li>
-									<li>
-										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
-										<a href="#" class="t">我喜欢生命本来的样子</a>
-									</li>
-									<li>
-										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
-										<a href="#" class="t">我喜欢生命本来的样子</a>
-									</li>
-									<li>
-										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
-										<a href="#" class="t">我喜欢生命本来的样子</a>
-									</li>
-									<li>
-										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="img"><img src="./assets/images/p6.png" alt=""></a>
 										<a href="#" class="t">我喜欢生命本来的样子</a>
 									</li>
 								</ul>
