--- a/南沙图书馆/src/resource-trial.html
+++ b/南沙图书馆/src/resource-trial.html
@@ -70,12 +70,12 @@
 						</div>
 						<div class="content-container">
 							<!-- 试用资源 -->
-							<table class="table table-bordered table-hover table-custom">
+							<table class="table table-hover table-custom">
 								<thead>
 									<tr>
-										<td>资源名称</td>
-										<td>数据介绍</td>
-										<td>访问</td>
+										<th width="200">资源名称</th>
+										<th>数据介绍</th>
+										<th width="140">访问</th>
 									</tr>
 								</thead>
 								<tbody>
